# HiveLaunch

./: CLAUDE.md  pnpm-lock.yaml
.github/workflows/: api-ci-linux.yml  api-ci-macos.yml  api-ci-windows.yml  ci.yml  desktop-ci-linux.yml  desktop-ci-macos.yml  desktop-ci-windows.yml  manual-deploy.yml  mobile-ci-android.yml  mobile-ci-cd.yml  mobile-ci-ios.yml  release.yml  web-ci.yml
.opencode/: oh-my-opencode.jsonc
apps/mobile/: package.json
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/web/components/kanban/: KanbanBoard.tsx
apps/web/scripts/: static-export-build.cjs
features/agent-execution/hooks/: useTaskExecutionV2.ts
features/settings/ui/: RemoteAccessSection.tsx
features/shared/store/: taskStore.ts
infra/db/: hivelaunch.db
infra/tauri/: tauri.conf.json
infra/tauri/src/: http_server_main.rs  lib.rs
infra/tauri/src/process/db/: execution_process_logs.rs  mod.rs
rules/: ci-cd-rules.md
